Model Checker v4.4